<resources>
    <string name="app_name">GameGuru</string>
    <string name="title_activity_login">Activity_Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="following">Following</string>
    <string name="create">Create</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="editimage">EditImage</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="app_icon">App Icon</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="hello_user_s_name">Hello, [User\'s Name]</string>
    <string name="featured_guides">Featured Guides</string>
    <string name="game_title">Game Title</string>
    <string name="game_genre">Game Genre</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="buh">buh</string>
    <string name="follow">Follow</string>
    <string name="this_is_a_short_description_or_bio_for_the_user_it_can_include_details_about_their_interests_expertise_or_any_other_relevant_information">This is a short description or bio for the user. It can include details about their interests, expertise, or any other relevant information.</string>
    <string name="my_guides">My Guides</string>
    <string name="log_out">Log Out</string>
    <string name="search_guides">Search guides and games</string>
    <string name="developer_publisher_release_date">Developer, Publisher, Release Date</string>
    <string name="game_description">Game Description</string>
    <string name="create_guide">Create guide</string>
    <string name="add_a_title">Add a title</string>
    <string name="select_game">Select game</string>
    <string name="b">B</string>
    <string name="i">I</string>
    <string name="u">U</string>
    <string name="color">Color</string>
    <string name="image">Image</string>
    <string name="link">Link</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="write_your_guide">Write your guide</string>
    <string name="add_image">Add Image</string>
    <string name="save_as_draft">Save as Draft</string>
    <string name="publish">Publish</string>
    <string name="related_guides">Related Guides</string>
    <string name="guide_title">Guide Title</string>
    <string name="game_name">Game Name</string>
    <string name="edit_guide">Edit Guide</string>
    <string name="author">Author</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="gameguru">GameGuru</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="select_image">Select Image</string>
    <string name="link_text">Link Text</string>
    <string name="url">URL</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="guide_image">Guide Image</string>
    <string name="guide_name">Guide Name</string>
    <string name="open_guide">Open Guide</string>
</resources>