<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"

        android:icon="@drawable/ic_home"
        android:title="@string/home"
         />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_following"
        android:title="@string/following"
       />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_create"
        android:title="@string/create"
         />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications"
       />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account"
       />

</menu>
