<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/android:colorBackground">

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/returnButton"
        android:background="@null"
        android:src="@drawable/ic_arrow_back"

        app:tint="?attr/colorOnSurface"/>

    <!-- Edit Profile Image Button -->
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/profileImageEdit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/img_white"
        android:scaleType="centerCrop"
        android:contentDescription="@string/editimage"
       />

    <!-- Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurface"
            android:backgroundTint="?attr/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Description Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurface"
            android:backgroundTint="?attr/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Save Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorPrimary" />

</androidx.appcompat.widget.LinearLayoutCompat>
