<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:backgroundTint="@color/primaryColor"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Guide Image -->
        <ImageView
            android:id="@+id/guideImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/guide_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_app"
            />

        <!-- Guide Title -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/guideTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/guideImage"
            android:layout_marginEnd="16dp"
            android:text="@string/guide_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Open Guide Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/openGuideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/guideTitle"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:text="@string/open_guide"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
