<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <!-- User Profile Image -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/user_profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/img_white"
            app:shapeAppearanceOverlay="@style/circleImageView"
            android:contentDescription="@string/user_profile_image" />

        <!-- User Name -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/user_profile_image"
            android:layout_alignTop="@id/user_profile_image"
            android:layout_marginStart="12dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?attr/android:textColorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/user_profile_image"
            android:layout_below="@id/user_name"
            android:layout_marginStart="12dp"
            android:text="@string/description"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="?attr/android:textColorPrimary" />



    </RelativeLayout>

</androidx.cardview.widget.CardView>
