<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/android:colorBackground">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:title="Game Details"
                    app:titleTextColor="?attr/colorOnPrimary" />


            </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/gameBannerImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:layout_marginBottom="16dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_title"
                android:textSize="24sp"
                android:textColor="?attr/android:textColorPrimary"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gameDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer_publisher_release_date"
                android:textSize="14sp"
                android:textColor="?attr/android:textColorSecondary"
                android:layout_marginBottom="16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gameDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_description"
                android:textSize="16sp"
                android:textColor="?attr/android:textColorPrimary"
                android:layout_marginBottom="16dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/genresContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical">
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/relatedGuidesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/related_guides"
                android:textSize="20sp"
                android:textColor="?attr/android:textColorPrimary"
                android:layout_marginBottom="8dp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/relatedGuidesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                tools:listitem="@layout/item_guide" />
    </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
